--- a/style.css
+++ b/style.css
@@ -12,95 +12,6 @@
   --base-text-50: var(--base-text) 50%;
 }
 
-@media (max-width: 320px) {
-  .text-16,
-  .text-20 {
-    font-size: 12px;
-    font-weight: 120%;
-  }
-  h1 {
-    font-size: 40px;
-    font-weight: 110%;
-  }
-  h2 {
-    font-size: 32px;
-    font-weight: 110%;
-  }
-
-  h3 {
-    font-size: 25px;
-    font-weight: 110%;
-  }
-  .panton-h2 {
-    font-family: PantonRustScript;
-    font-size: 22px;
-    font-weight: auto;
-    color: var(--red);
-  }
-
-  .panton-h4 {
-    font-family: PantonRustScript;
-    font-size: 22px;
-    font-weight: auto;
-    color: var(--red);
-  }
-}
-
-@media (min-width: 1920px) {
-  .text-16 {
-    font-size: 16px;
-    font-weight: 120%;
-    margin: 8px 0;
-  }
-
-  .text-20 {
-    font-size: 20px;
-    font-weight: 120%;
-    margin: 8px 0;
-  }
-
-  p {
-    font-size: 20px;
-    font-weight: 120%;
-    margin: 8px 0;
-  }
-
-  h1 {
-    font-size: 116px;
-    font-weight: 110%;
-  }
-
-  h2 {
-    font-size: 90px;
-    font-weight: 110%;
-  }
-
-  h3 {
-    font-size: 45px;
-    font-weight: 120%;
-    margin: 8px 0;
-  }
-
-  h4 {
-    font-size: 26px;
-    font-weight: 110%;
-    margin: 0;
-  }
-  .panton-h2 {
-    font-family: PantonRustScript;
-    font-size: 64px;
-    font-weight: 110;
-    color: var(--red);
-  }
-
-  .panton-h4 {
-    font-family: PantonRustScript;
-    font-size: 26px;
-    font-weight: 120%;
-    color: var(--red);
-  }
-}
-
 a:link {
   text-decoration: none;
 }
@@ -108,8 +19,62 @@ a:link {
 body {
   overflow-x: hidden;
   font-family: FormaDJRCyrillicDeck;
-  background-color: #eef5ff;
+  background-color: var(--light-blue);
   box-sizing: border-box;
+}
+
+.text-16 {
+  font-size: 16px;
+  font-weight: 120%;
+  margin: 8px 0;
+}
+
+.text-20 {
+  font-size: 20px;
+  font-weight: 120%;
+  margin: 8px 0;
+}
+
+p {
+  font-size: 20px;
+  font-weight: 120%;
+  margin: 8px 0;
+}
+
+h1 {
+  margin: 20px 0;
+  font-size: 116px;
+  font-weight: 110%;
+}
+
+h2 {
+  font-size: 90px;
+  font-weight: 110%;
+}
+
+h3 {
+  font-size: 45px;
+  font-weight: 120%;
+  margin: 8px 0;
+}
+
+h4 {
+  font-size: 26px;
+  font-weight: 110%;
+  margin: 10px 0;
+}
+.panton-h2 {
+  font-family: PantonRustScript;
+  font-size: 64px;
+  font-weight: 110;
+  color: var(--red);
+}
+
+.panton-h4 {
+  font-family: PantonRustScript;
+  font-size: 26px;
+  font-weight: 120%;
+  color: var(--red);
 }
 
 button {
@@ -123,12 +88,8 @@ button:active {
 .header-container-image {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-image: url("public/bg-image\ 1.png");
+  right: 0;
   background-repeat: no-repeat;
-  background-position: center;
   z-index: -1;
 }
 
@@ -188,7 +149,6 @@ button:active {
 }
 
 .main-container {
-  margin: 0 auto;
   padding: 0 200px;
 }
 
@@ -201,12 +161,12 @@ button:active {
 .description-photo {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 2fr));
-  min-width: 35vh;
   gap: 20px;
-  background: white;
+  background: var(--light-blue);
   border-radius: 60px;
   padding: 30px;
   margin-bottom: 350px;
+  z-index: -1;
 }
 
 .description-photo .description-photo-item:nth-child(2n + 1) {
@@ -215,9 +175,11 @@ button:active {
 }
 
 .description-photo-item {
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 35px;
+  background: white;
   padding: 20px;
-  background: rgb(211, 211, 211);
   color: var(--base-blue);
 }
 
@@ -240,12 +202,17 @@ button:active {
 
 .company-background-image {
   position: absolute;
-  top: -360px;
+  top: -200px;
   z-index: -1;
 }
 
 .company-screen {
   position: relative;
+}
+
+.company-surfer-photo {
+  position: relative;
+  max-width: 100%;
 }
 
 .company-surfer-overlay {
@@ -263,6 +230,7 @@ button:active {
 }
 
 .company-block-about {
+  max-width: 100%;
   border-radius: 35px;
   padding: 40px;
   background: var(--base-blue);
@@ -273,6 +241,7 @@ button:active {
 }
 
 .company-block-members {
+  max-width: 100%;
   display: flex;
   justify-content: center;
   border-radius: 35px;
@@ -318,20 +287,30 @@ button:active {
 
 .rewards-photo {
   display: flex;
+  justify-content: center;
   align-items: center;
+  gap: 30px;
   background-color: var(--light-blue);
   border-radius: 60px;
   background: white;
 }
 
+.rewards-photo-png {
+  max-width: 100%;
+  height: auto;
+}
+
 .rewards-photo-background {
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
   padding: 30px;
   background: var(--light-blue);
   border-radius: 60px;
 }
 
 .rewards-photo-text {
-  margin-left: 114px;
+  padding: 30px;
   color: var(--base-blue);
 }
 
@@ -344,8 +323,9 @@ button:active {
 }
 
 .cards {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(420px, 2fr));
+  gap: 200px;
   margin-bottom: 240px;
 }
 
@@ -531,6 +511,7 @@ button:active {
 }
 
 .order-block-photo {
+  max-width: 100%;
   width: 550px;
   height: 400px;
   margin-left: 100px;
@@ -622,6 +603,143 @@ button:active {
   display: flex;
   gap: 10px;
   align-items: center;
+}
+
+@media (max-width: 1024px) {
+  .text-16 {
+    font-size: 10px;
+    font-weight: 120%;
+  }
+  .text-20 {
+    font-size: 16px;
+    font-weight: 120%;
+  }
+  h1 {
+    font-size: 64px;
+    font-weight: 110%;
+  }
+  h2 {
+    font-size: 48px;
+    font-weight: 110%;
+  }
+
+  h3 {
+    font-size: 25px;
+    font-weight: 110%;
+  }
+  .panton-h2 {
+    font-family: PantonRustScript;
+    font-size: 36px;
+    font-weight: auto;
+    color: var(--red);
+  }
+
+  .panton-h4 {
+    font-family: PantonRustScript;
+    font-size: 36px;
+    font-weight: auto;
+    color: var(--red);
+  }
+  .header-container-menu {
+    display: none;
+  }
+  .main-container {
+    padding: 0 50px;
+  }
+  .description-photo-item:nth-child(n + 4) {
+    display: none;
+  }
+  .discounts-photos-card {
+    display: flex;
+  }
+  .discounts-photos-card-png {
+    max-width: 100%;
+    width: 200px;
+    height: 200px;
+  }
+  .discounts-photos-card-text-down p {
+    font-size: 12px;
+    font-weight: 120%;
+  }
+  .rewards-photo-png {
+    width: 40%;
+  }
+  .discounts-background-image,
+  .order-background-image,
+  .rewards-background-image,
+  .company-background-image {
+    width: 140vw;
+  }
+  .order-block-photo {
+    margin-left: 30px;
+    max-width: 45%;
+    height: 350px;
+  }
+
+  .company-surfer-photo {
+    width: 480px;
+    height: 300px;
+  }
+  .company-surfer-overlay {
+    width: 150px;
+    top: 35%;
+    left: 35%;
+  }
+  .company-block-about {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .company-block-about p,
+  .company-block-members p {
+    font-size: 12px;
+  }
+  .company-block-members {
+    align-items: center;
+  }
+  .company-block-members-svg {
+    width: 55px;
+  }
+}
+
+@media (max-width: 320px) {
+  .text-16,
+  .text-20 {
+    font-size: 12px;
+    font-weight: 120%;
+  }
+  h1 {
+    font-size: 40px;
+    font-weight: 110%;
+  }
+  h2 {
+    font-size: 32px;
+    font-weight: 110%;
+  }
+
+  h3 {
+    font-size: 25px;
+    font-weight: 110%;
+  }
+  .panton-h2 {
+    font-family: PantonRustScript;
+    font-size: 22px;
+    font-weight: auto;
+    color: var(--red);
+  }
+
+  .panton-h4 {
+    font-family: PantonRustScript;
+    font-size: 22px;
+    font-weight: auto;
+    color: var(--red);
+  }
+  .header-container-menu,
+  .header-container-contacts-number {
+    display: none;
+  }
 }
 
 @font-face {
