--- a/style.css
+++ b/style.css
@@ -609,6 +609,7 @@ button:active {
   justify-content: space-between;
   width: 100vw;
   height: 130vh;
+  margin-bottom: 150px;
 }
 
 .location-address-svg {
@@ -627,6 +628,35 @@ button:active {
   display: flex;
   gap: 10px;
   align-items: center;
+}
+
+.footer {
+  padding-top: 50px;
+  width: 100vw;
+  background: white;
+}
+
+.footer-common {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 120px;
+}
+.footer h4 {
+  margin-bottom: 20px;
+}
+.footer-way {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: start;
+}
+.footer-way p {
+  font-size: 16px;
+}
+.footer-copyright {
+  display: flex;
+  justify-content: space-around;
 }
 
 @media (max-width: 1024px) {
