--- a/style.css
+++ b/style.css
@@ -614,8 +614,8 @@ button:active {
 
 .location-address-svg {
   position: absolute;
-  top: 575px;
-  left: 390px;
+  top: 43%;
+  left: 35%;
 }
 
 .location-address-background {
