--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ button:active {
 .order-background-image,
 .rewards-background-image {
   position: absolute;
-  top: -0;
+  top: -50px;
   left: 50%;
   transform: translateX(-50%);
   z-index: -1;
@@ -602,8 +602,8 @@ button:active {
 
 .location-text {
   display: grid;
-  grid-template-columns: 270px 400px;
-  grid-template-rows: 100px 60px;
+  grid-template-columns: clamp(170px, 20vw, 270px) clamp(240px, 25vw, 400px);
+  grid-template-rows: clamp(40px, 6vw, 100px) clamp(40px, 4vw, 60px);
   width: fit-content;
   background: white;
   border-radius: 60px;
