--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ button:active {
 }
 
 .main-container {
-  padding: 0 200px;
+  padding: 0 clamp(50px, 10vw, 200px);
 }
 
 .preview {
@@ -540,9 +540,9 @@ button:active {
 
 .order-block-photo {
   max-width: 100%;
-  width: 550px;
-  height: 400px;
-  margin-left: 100px;
+  width: clamp(400px, 35vw, 550px);
+  height: clamp(250px, 25vw, 400px);
+  margin-left: clamp(40px, 4vw, 100px);
   object-fit: cover;
   object-position: right;
   border-radius: 60px;
