--- a/style.css
+++ b/style.css
@@ -189,10 +189,29 @@ button:active {
   color: var(--base-blue);
 }
 
+.company-full {
+  display: flex;
+  flex-direction: column;
+}
+
 .company-text {
+  display: grid;
+  grid-template-columns: clamp(50px, 9vw, 150px) 600px;
+  grid-template-rows: clamp(30px, 4vw, 60px) clamp(30px, 4vw, 60px);
   color: var(--base-blue);
   max-width: 900px;
-  line-height: 10px;
+  margin-bottom: 30px;
+  .panton-h2 {
+    grid-column: 2;
+    grid-row: 2;
+    margin: 0;
+  }
+}
+
+.company-text :nth-child(2n + 1) {
+  grid-column: 1;
+  grid-row: 1 / span 2;
+  margin: 0;
 }
 
 .company {
@@ -730,7 +749,7 @@ button:active {
     display: none;
   }
   .main-container {
-    padding: 0 50px;
+    padding: 0 clamp(15px, 4vw, 100px);
   }
   .description-photo-item:nth-child(n + 4) {
     display: none;
@@ -747,6 +766,43 @@ button:active {
   .description-photo-item-png {
     width: 200px;
   }
+
+  h2.panton-h2 {
+    font-size: clamp(22px, 7vw, 32px);
+  }
+
+  .company-text {
+    align-items: start;
+  }
+
+  .company-surfer-photo {
+    width: 480px;
+    height: 300px;
+  }
+  .company-surfer-overlay {
+    width: 150px;
+    top: 35%;
+    left: 35%;
+  }
+  .company-block-about {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .company-block-about p,
+  .company-block-members p {
+    font-size: 12px;
+  }
+
+  .company-block-members {
+    align-items: center;
+  }
+  .company-block-members-svg {
+    width: 55px;
+  }
+
   .discounts-photos-card {
     display: flex;
   }
@@ -802,22 +858,6 @@ button:active {
     height: 350px;
   }
 
-  .company-surfer-photo {
-    width: 480px;
-    height: 300px;
-  }
-  .company-surfer-overlay {
-    width: 150px;
-    top: 35%;
-    left: 35%;
-  }
-  .company-block-about {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-  }
-
   .comment-text {
     font-size: 25px;
   }
@@ -825,18 +865,6 @@ button:active {
   .location-text {
     grid-template-columns: 170px 240px;
     grid-template-rows: 40px 40px;
-  }
-
-  .company-block-about p,
-  .company-block-members p {
-    font-size: 12px;
-  }
-
-  .company-block-members {
-    align-items: center;
-  }
-  .company-block-members-svg {
-    width: 55px;
   }
 }
 
