--- a/style.css
+++ b/style.css
@@ -597,8 +597,8 @@ button:active {
 
 .order-block-photo {
   max-width: 100%;
-  width: clamp(300px, 35vw, 550px);
-  height: clamp(250px, 25vw, 400px);
+  width: clamp(400px, 35vw, 550px);
+  height: clamp(300px, 25vw, 400px);
   margin-left: clamp(40px, 4vw, 100px);
   object-fit: cover;
   object-position: right;
@@ -862,7 +862,6 @@ button:active {
 
   .order-block-photo {
     margin-left: 30px;
-    max-width: 45%;
     height: 350px;
   }
 
@@ -883,7 +882,30 @@ button:active {
     align-items: center;
   }
 
-  .rewards-background-image {
+  .order-block-photo {
+    width: 70vw;
+    height: auto;
+    margin: 0;
+    border-radius: 40px;
+    object-position: center;
+  }
+  .order-block {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 40px;
+  }
+  .order-block-form {
+    grid-template-columns: 70vw;
+    grid-template-rows: repeat(7, 1fr);
+  }
+  .order-block-form-table {
+    padding: 30px 15px;
+  }
+  .order-block-form-table-tarif {
+    grid-column: 1;
+  }
+  .order-background-image {
+    height: clamp(1400px, 170vw, 1500px);
   }
 }
 
