--- a/style.css
+++ b/style.css
@@ -1005,6 +1005,22 @@ button:active {
   }
 }
 
+@media (max-width: 520px) {
+  .rewards-text {
+    display: grid;
+    grid-template-columns: 100px 300px;
+    grid-template-rows: 60px 60px;
+    gap: 0;
+    h2.panton-h2 {
+      grid-column: 2;
+      grid-row: 1 / span 2;
+    }
+    h2 {
+      margin: 0;
+    }
+  }
+}
+
 @media (max-width: 320px) {
   .text-16,
   .text-20 {
