--- a/style.css
+++ b/style.css
@@ -983,6 +983,14 @@ button:active {
   }
 }
 
+@media (max-width: 800px) {
+  .header-container-image {
+    max-height: 100%;
+    display: block;
+    left: calc(-1000px + 40vw);
+  }
+}
+
 @media (max-width: 700px) {
   .company-text {
     display: flex;
